adds all project directors.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -1,6 +1,15 @@
 - name: "Bahador Bakhshi"
   bio: "Assistant Professor"
-  role: "Project Director"
   avatar: "https://github.com/bahadorAUT.png"
   github: "https://github.com/BahadorAUT"
   url: "http://ceit.aut.ac.ir/~bakhshis/"
+- name: "Mehdi Rasti"
+  bio: "Assistant Professor"
+  avatar: "https://scholar.google.com/citations?view_op=view_photo&user=zb8pjMYAAAAJ&citpid=3"
+  github: "#"
+  url: "http://www.aut.ac.ir/rasti"
+- name: "Masoud Sabaei"
+  bio: "Associate Professor"
+  avatar: "https://scholar.google.com/citations?view_op=view_photo&user=aIiC_6UAAAAJ&citpid=10"
+  github: "#"
+  url: "http://www.aut.ac.ir/sabaei/"
