--- a/_data/members.yml
+++ b/_data/members.yml
@@ -13,3 +13,8 @@
   avatar: "https://scholar.google.com/citations?view_op=view_photo&user=aIiC_6UAAAAJ&citpid=10"
   github: "#"
   url: "http://www.aut.ac.ir/sabaei/"
+- name: "Bahador Bakhshi"
+  bio: "PhD Student"
+  avatar: "https://github.com/qaranqush.png"
+  github: "https://github.com/qaranqush"
+  url: "http://ceit.aut.ac.ir/~alizadeh/"
