corrects typo in members names.

--- a/_data/members.yml
+++ b/_data/members.yml
@@ -13,7 +13,7 @@
   avatar: "https://scholar.google.com/citations?view_op=view_photo&user=aIiC_6UAAAAJ&citpid=10"
   github: "#"
   url: "http://www.aut.ac.ir/sabaei/"
-- name: "Bahador Bakhshi"
+- name: "Yaghoub Alizadeh"
   bio: "PhD Student"
   avatar: "https://github.com/qaranqush.png"
   github: "https://github.com/qaranqush"
