--- a/_data/members.yml
+++ b/_data/members.yml
@@ -18,3 +18,8 @@
   avatar: "https://github.com/qaranqush.png"
   github: "https://github.com/qaranqush"
   url: "http://ceit.aut.ac.ir/~alizadeh/"
+- name: "Parham Alvani"
+  bio: "MSc Student"
+  avatar: "https://github.com/1995parham.png"
+  github: "https://github.com/1995parham"
+  url: "https://1995parham.github.io"
