--- a/_data/members.yml
+++ b/_data/members.yml
@@ -23,3 +23,8 @@
   avatar: "https://github.com/1995parham.png"
   github: "https://github.com/1995parham"
   url: "https://1995parham.github.io"
+- name: "Sepehr Sabour"
+  bio: "MSc Student"
+  avatar: "https://github.com/pesehr.png"
+  github: "https://github.com/pesehr"
+  url: "http://ceit.aut.ac.ir/~sepehr/"
