--- a/_data/members.yml
+++ b/_data/members.yml
@@ -5,7 +5,7 @@
   url: "http://ceit.aut.ac.ir/~bakhshis/"
 - name: "Mehdi Rasti"
   bio: "Assistant Professor"
-  avatar: "https://scholar.google.com/citations?view_op=view_photo&user=zb8pjMYAAAAJ&citpid=3"
+  avatar: "http://ceit.aut.ac.ir/autcms/res/upload//computer-engineering/rasti/Dr_Rasti-larg.jpg"
   url: "http://www.aut.ac.ir/rasti"
 - name: "Masoud Sabaei"
   bio: "Associate Professor"
