--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - title : jahangiri visited our lab
   date : 20 Oct 2017
   desc : jahangiri is here
-  link: /jahangiri
+  link: jahangiri
   image : /news-1.jpg
