Corrects research group data.

--- a/_data/groups.yml
+++ b/_data/groups.yml
@@ -1,16 +1,16 @@
 - name: "Building Management System"
   desc : "blah blah blah"
-  link : "/blah"
-  icon : "/blah.png"
+  link : "blah"
+  icon : "blah.png"
 - name: "Smart Metering"
   desc : "blah blah blah"
-  link : "/blah"
-  icon : "/blah.png"
+  link : "blah"
+  icon : "blah.png"
 - name: "Smart Parking"
   desc : "blah blah blah"
-  link : "/blah"
-  icon : "/blah.png"
-- name: "IOT Platform"
+  link : "blah"
+  icon : "blah.png"
+- name: "IoT Platform"
   desc : "blah blah blah"
-  link : "/blah"
-  icon : "/blah.png"
+  link : "blah"
+  icon : "blah.png"
