Corrects news and data links.

--- a/_data/groups.yml
+++ b/_data/groups.yml
@@ -1,16 +1,16 @@
 - name: "Building Management System"
   desc : "blah blah blah"
-  link : "blah"
+  link : "groups/bms.html"
   icon : "blah.png"
 - name: "Smart Metering"
   desc : "blah blah blah"
-  link : "blah"
+  link : "groups/sm.html"
   icon : "blah.png"
 - name: "Smart Parking"
   desc : "blah blah blah"
-  link : "blah"
+  link : "groups/sp.html"
   icon : "blah.png"
 - name: "IoT Platform"
   desc : "blah blah blah"
-  link : "blah"
+  link : "groups/platform.html"
   icon : "blah.png"
