Corrects research groups.

--- a/_data/groups.yml
+++ b/_data/groups.yml
@@ -1,16 +1,8 @@
-- name: "Building Management System"
-  desc : "blah blah blah"
-  link : "groups/bms.html"
-  icon : "blah.png"
-- name: "Smart Metering"
-  desc : "blah blah blah"
-  link : "groups/sm.html"
-  icon : "blah.png"
-- name: "Smart Parking"
-  desc : "blah blah blah"
-  link : "groups/sp.html"
-  icon : "blah.png"
-- name: "IoT Platform"
-  desc : "blah blah blah"
-  link : "groups/platform.html"
-  icon : "blah.png"
+- name: "I1820"
+  desc : "I1820 IoT Platform that handles many verticals"
+  link : "https://I1820.github.io"
+  icon : "https://github.com/I1820.png"
+- name: "Toskatok"
+  desc: "Test IoT Platforms under heavy loads"
+  link: "https://github.com/toskatok"
+  icon: "https://github.com/toskatok.png"
