Comments out news.

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
-- title : "Dr.Jahangiri visited our lab"
-  date : "20 Oct 2017"
-  desc : "Dr.Jahangiri is here"
-  link: "news/1.html"
-  image : "news/1.jpg"
+# - title : "Dr.Jahangiri visited our lab"
+#  date : "20 Oct 2017"
+#  desc : "Dr.Jahangiri who is the ministery of science of iran"
+#  link: "news/1.html"
+#  image : "news/1.jpg"
